--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
       <version>3.9.0.GA</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.xiaoleilu</groupId>
+      <artifactId>hutool-all</artifactId>
+      <version>3.1.1</version>
+    </dependency>
+
   </dependencies>
 </project>
 
