--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,21 @@
       <version>3.1.1</version>
     </dependency>
 
+<!--动态字节码-->
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>3.2.5</version>
+    </dependency>
+<!--动态字节码-->
+    <dependency>
+      <groupId>org.javassist</groupId>
+      <artifactId>javassist</artifactId>
+      <version>3.21.0-GA</version>
+    </dependency>
+
+
+
   </dependencies>
 </project>
 
