--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,9 @@
     </dependency>
 
     <dependency>
-      <groupId>com.xiaoleilu</groupId>
+      <groupId>cn.hutool</groupId>
       <artifactId>hutool-all</artifactId>
-      <version>3.2.2</version>
+      <version>5.0.7</version>
     </dependency>
 
 <!--动态字节码-->
