map 中key为long测试,java不同数据类型对转json的字节数影响测试

--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,11 @@
       <artifactId>hutool-all</artifactId>
       <version>5.1.0</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.10</version>
+    </dependency>
 <!--动态字节码-->
     <dependency>
       <groupId>cglib</groupId>
