--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <exec.mainClass>com.socket.udp.demo1.UDPServer</exec.mainClass>
+    <exec.mainClass>com.socket.udp.demo1.UDPClient</exec.mainClass>
   </properties>
 
   <build>
@@ -155,6 +155,13 @@
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>1.1.11</version>
+    </dependency>
+
+<!--    小而美的依赖注入框架-->
+    <dependency>
+      <groupId>com.google.inject</groupId>
+      <artifactId>guice</artifactId>
+      <version>4.1.0</version>
     </dependency>
 
   </dependencies>
