--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.18.10</version>
+      <scope>provided</scope>
     </dependency>
 
 <!--    日志打印-->
