--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <exec.mainClass>com.socket.udp.demo1.UDPClient</exec.mainClass>
+<!--    <exec.mainClass>com.socket.udp.demo1.UDPClient</exec.mainClass>-->
 <!--    <exec.mainClass>com.syntax.spi.SPITest</exec.mainClass>-->
+    <exec.mainClass>com.syntax.SyntaxTest</exec.mainClass>
   </properties>
 
   <build>
@@ -92,7 +93,12 @@
       <artifactId>logback-classic</artifactId>
       <version>1.1.11</version>
     </dependency>
-
+<!--    Java Object Layout，是分析JVM中对象布局的工具-->
+    <dependency>
+      <groupId>org.openjdk.jol</groupId>
+      <artifactId>jol-core</artifactId>
+      <version>0.9</version>
+    </dependency>
 
 
   </dependencies>
