--- a/pom.xml
+++ b/pom.xml
@@ -71,9 +71,9 @@
       <version>5.7.22</version>
     </dependency>
     <dependency>
-      <groupId>cn.hutool</groupId>
-      <artifactId>hutool-json</artifactId>
-      <version>5.7.22</version>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.80</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
